--- a/src/Topxia/AdminBundle/Resources/views/ArticleCategory/tbody.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/ArticleCategory/tbody.html.twig
@@ -15,7 +15,7 @@
             {% set isRoot = category.depth == 1 %}
             <li id="{{ category.id }}" class="tr" data-name="{{ category.name }}" data-id="{{ category.id }}" data-parent-id="{{ category.parentId }}" style="display: {{ (not isRoot and isCollapseChildren) ? 'none' : 'block' }}">
                 <div class="row{{ (isParent and isCollapseChildren) ? ' row-collapse' : ' row-expand' }}">
-                    <div class="td col-md-7 name sort-handle" style="padding-left: {{ 24 * (category.depth - 1 ) }}px">
+                    <div class="td col-md-7 name sort-handle" style="padding-left: {{ 24 * (category.depth - 1 ) }}px; overflow: hidden">
                         {% if isParent %}
                             <i class="list-table-tree-icon glyphicon glyphicon-chevron-{{ isCollapseChildren ? 'right' : 'down' }}"></i>
                         {% else %}
