--- a/src/Org/OrgBundle/Resources/views/OrgManage/index.html.twig
+++ b/src/Org/OrgBundle/Resources/views/OrgManage/index.html.twig
@@ -35,7 +35,7 @@
             {% set isRoot = org.depth == 1 %}
             <li id="{{ org.id }}" class="tr" data-name="{{ org.name }}" data-id="{{ org.id }}" data-parent-id="{{ org.parentId }}" style="display: {{ (not isRoot and isCollapseChildren) ? 'none' : 'block' }}">
                 <div class="row{{ (isParent and isCollapseChildren) ? ' row-collapse' : ' row-expand' }}">
-                    <div class="td col-md-3 name sort-handle" style="padding-left: {{ 24 * (org.depth - 1 ) }}px">
+                    <div class="td col-md-3 name sort-handle" style="padding-left: {{ 24 * (org.depth - 1 ) }}px; overflow: hidden" title="{{ org.name }}">
                         {% if isParent %}
                             <i class="list-table-tree-icon glyphicon glyphicon-chevron-{{ isCollapseChildren ? 'right' : 'down' }}"></i>
                         {% else %}
