--- a/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
@@ -150,7 +150,11 @@
           <p class="text-success">{{'赞一个，这个课程你已经都学完啦，你可以再回顾一下或者去看看别的课程'|trans}}～～～</p>
         </div>
         <div class="modal-footer">
-          <a href="{{ path('course_show', {id:course.id}) }}" class="btn btn-primary">{{'回课程主页'|trans}}</a>
+          {% if is_plugin_installed('InternalTraining') %}
+            <a href="{{ path('internal_training_index') }}" class="btn btn-primary">{{'会课程列表页'|trans}}</a>
+          {% else %}
+            <a href="{{ path('course_show', {id:course.id}) }}" class="btn btn-primary">{{'回课程主页'|trans}}</a>
+          {% endif %}
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
