testpaper-lesson-set-redo-time-fix

--- a/src/Topxia/WebBundle/Resources/views/MyQuiz/my-quiz.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyQuiz/my-quiz.html.twig
@@ -9,6 +9,7 @@
     	<tbody>
     		{% for myTestpaperResult in myTestpaperResults %}
     			{% set myTestpaper = myTestpapers[myTestpaperResult.testId]|default(null) %}
+          {% set lesson = data('CourseLesson',{'lessonId':myTestpaperResult.lessonId})|default(null) %}
     			{% if myTestpaper %}
     				{% set course = courses[myTestpaper.target|get_course_id] %}
     			{% endif %}
