--- a/src/Topxia/WebBundle/Resources/views/MyQuiz/my-quiz-tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyQuiz/my-quiz-tr.html.twig
@@ -23,7 +23,12 @@
 		{% if myTestpaperResult.status in ['doing', 'paused'] %}
 			<a href="{{ path('course_manage_show_test', {id:myTestpaperResult.id}) }}" class="btn btn-default btn-sm">{{'继续考试'|trans}}</a>
 		{% elseif myTestpaperResult.status == 'finished' %}
-      <a href="{{ path('course_lesson_redo_test',{lessonId:myTestpaperResult.lessonId,testId:myTestpaper.id}) }}" class="btn btn-default btn-sm">{{'再做一次'|trans}}</a>
+			
+      {% if lesson|default(null) and lesson.redoInterval|default(0) and ("now"|date("U")) < (myTestpaperResult.checkedTime + lesson.redoInterval * 60)%}
+      	<span class="text-success text-sm">{{ (myTestpaperResult.checkedTime + lesson.redoInterval * 60)|date('m-d H:i:s') }} 后可重考</span>
+      {% elseif lesson|default(null) and not lesson.doTimes %}
+      	<a href="{{ path('course_lesson_redo_test',{lessonId:myTestpaperResult.lessonId,testId:myTestpaper.id}) }}" class="btn btn-default btn-sm">{{'再做一次'|trans}}</a>
+      {% endif %}
 			<a href="{{ path('course_manage_test_results', {id:myTestpaperResult.id}) }}" class="btn btn-link btn-sm" target="_blank">{{'查看结果'|trans}}</a>
 		{% endif %}
 	</td>
