--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/test-paper-card.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/test-paper-card.html.twig
@@ -8,7 +8,7 @@
 		    {% endif %}
 		{% else %}
 		  <span class="testpaper-card-timer"><small class="text-muted" style="font-size:14px;">{{'时间不限'|trans}}</small></span>
-			<button class="btn btn-sm btn-default pull-right"{% if id > 0 %} id="suspend" data-url="{{ path('course_manage_do_test_suspend', {id:id}) }}" data-goto="{{ path('my_quiz') }}"{% endif %}>{{'下次再做'|trans}}</button>
+			<button class="btn btn-sm btn-default pull-right"{% if id > 0 %} id="suspend" data-url="{{ path('course_manage_do_test_suspend', {id:id}) }}" data-goto="{{ path('my_quiz') }}"{% endif %}>{{'稍候再做'|trans}}</button>
 		{% endif %}
 		{% if target and target.doTimes|default('0') %}
 			<div><span class="text-warning text-md">本次考试仅一次机会</span></div>
