--- a/src/Topxia/WebBundle/Resources/views/CourseTestpaperManage/testpaper-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseTestpaperManage/testpaper-modal.html.twig
@@ -38,16 +38,15 @@
         <div class="col-md-2 control-label"><label>{{'考试次数'|trans}}</label></div>
         <div class="col-md-9 controls radios">
           {{ radios('doTimes', {0:'不限', 1:'单次'}, lesson.doTimes|default('0')) }}
-          <div class="help-block">{{'0分钟，表示无限制。'|trans}}</div>
         </div>
       </div>
 
       <div class="form-group" {% if lesson.doTimes|default('0') %}style="display:none;" {% endif %}>
         <div class="col-md-2 control-label"><label for="lesson-redo-interval-field">{{'重考间隔'|trans}}</label></div>
         <div class="col-md-9 controls">
-          <input id="lesson-redo-interval-field" class="form-control width-input width-input-small" type="text" name="redoInterval" value="{{ lesson.redoInterval|default('0') }}"> {{'分钟'|trans}}
+          <input id="lesson-redo-interval-field" class="form-control width-input width-input-small" type="text" name="redoInterval" value="{{ lesson.redoInterval|default('0') }}"> {{'小时'|trans}}
           <i class="es-icon es-icon-help color-gray" data-toggle="tooltip" data-placement="right" data-original-title="{{'重考时间间隔：完成批阅后开始计时，计时结束后才可再次考试。'|trans}}"></i>
-          <div class="help-block">{{'0分钟，表示无限制。'|trans}}</div>
+          <div class="help-block">{{'0小时，表示无限制。'|trans}}</div>
         </div>
       </div>
 
