--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/Part/classroom-buy-btn.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/Part/classroom-buy-btn.html.twig
@@ -9,7 +9,7 @@
       {% endif %}
       <a class="btn btn-primary btn-lg" href="#modal" data-toggle="modal" data-url="{{ path('classroom_buy', {id:classroom.id}) }}">加入购买</a>
     {% else %}
-      <button type="button" style="pointer-events:auto" class="btn btn-warning disabled" data-toggle="tooltip" data-placement="top" title="该{{setting("classroom.name")|default("班级")}}无法在线购买，若需帮助请联系客服">无法购买</button>
+      <button type="button" style="pointer-events:auto" class="btn btn-default disabled" data-toggle="tooltip" data-placement="top" title="该{{setting("classroom.name")|default("班级")}}无法在线购买，若需帮助请联系客服">无法购买</button>
     {% endif %}
   {% endif %}
 {% else %}
@@ -20,7 +20,7 @@
       {% endif %}
       <a class="btn btn-primary btn-lg" href="{{path('order_show',{targetId:classroom.id,targetType:'classroom'})}}">加入购买</a>
     {% else %}
-      <button type="button" style="pointer-events:auto" class="btn btn-warning disabled" data-toggle="tooltip" data-placement="top" title="该{{setting("classroom.name")|default("班级")}}无法在线购买，若需帮助请联系客服">无法购买</button>
+      <button type="button" style="pointer-events:auto" class="btn btn-default disabled" data-toggle="tooltip" data-placement="top" title="该{{setting("classroom.name")|default("班级")}}无法在线购买，若需帮助请联系客服">无法购买</button>
     {% endif %}
   {% elseif checkMemberLevelResult in ['not_member', 'member_expired'] %}
     <a href="{{ path('vip_buy') }}"  class="btn btn-primary btn-lg" >{{ classroomMemberLevel.name }}，免费学</a>  
@@ -41,7 +41,7 @@
         {% endif %}
       >免费加入</a>
     {% else %}
-    <button type="button" style="pointer-events:auto" class="btn btn-warning disabled" data-toggle="tooltip" data-placement="top" title="该{{setting("classroom.name")|default("班级")}}无法在线购买，若需帮助请联系客服">无法购买</button>
+    <button type="button" style="pointer-events:auto" class="btn btn-default disabled" data-toggle="tooltip" data-placement="top" title="该{{setting("classroom.name")|default("班级")}}无法在线购买，若需帮助请联系客服">无法购买</button>
     {% endif %}
   {% endif %}
 {% endif %}
