--- a/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
@@ -33,7 +33,11 @@
       {% if classroom %}
         <a class="btn btn-primary  nav-btn back-course-btn" href="{{ path('classroom_show', {id:classroom.id}) }}"><span class="glyphicon glyphicon-chevron-left" ></span> {{'返回班级'|trans}}</a>
       {% else %}
-        <a class="btn btn-primary  nav-btn back-course-btn" href="{{ path('course_show', {id:course.id}) }}"><span class="glyphicon glyphicon-chevron-left" ></span> {{'返回课程'|trans}}</a>
+        {% if is_plugin_installed('InternalTraining') %}
+          <a class="btn btn-primary  nav-btn back-course-btn" href="{{ path('internal_training_index') }}"><span class="glyphicon glyphicon-chevron-left" ></span> {{'返回课程列表'|trans}}</a>
+        {% else %}
+          <a class="btn btn-primary  nav-btn back-course-btn" href="{{ path('course_show', {id:course.id}) }}"><span class="glyphicon glyphicon-chevron-left" ></span> {{'返回课程'|trans}}</a>
+        {% endif %}
       {% endif %}
 
        <a class="btn btn-primary  nav-btn prev-lesson-btn" href="javascript:" data-role="prev-lesson" data-placement="right" title="{{'上一课时'|trans}}"><span class="glyphicon glyphicon-chevron-up" title="{{'上一课时'|trans}}"></span></a>
