feature: 自定义页面管理和增加URL路径展示

--- a/src/Topxia/AdminBundle/Resources/views/Content/content-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Content/content-tr.html.twig
@@ -8,6 +8,8 @@
 			<span class="text-muted text-sm">分类：{{ category.name }}</span>
 		{% endif %}
 	</td>
+	{% set content_uri = url('content_' ~ content.type ~ '_show', {alias:content.alias|default(content.id)}) %}
+	<td><a href="{{ content_uri }}" target="_blank">{{ content_uri }}</a></td>
 	<td>{{ dict_text('contentType', content.type) }}</td>
 	<td>{{ dict_text('contentStatus:html', content.status) }}</td>
 	<td>
