--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -66,7 +66,6 @@
     color: #fff;
     border-radius: 50%;
     text-align: center;
-    line-height: 36px;
     margin-right: 8px;
     background: #919191;
     .es-transition;
@@ -76,6 +75,11 @@
     }
     i{
     	font-size: 18px;
+    	line-height: 36px;
+    }
+    .qrcode-popover.top .qrcode-content{
+    	left: -77px;
+    	top: -247px;
     }
 	}
 	.operation-zan.active,.operation-zan:hover{
