--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
@@ -13,7 +13,11 @@
     </div>
 
     <button class="btn btn-primary">搜索</button>
-    
+    {% set tooltip_content = '<div style="width:250px;">
+              <span style="color:blue;">班级说明</span><br>
+              1、编号无法修改以及排序；<br>
+            </div>' %}
+    {% include 'TopxiaAdminBundle:Widget:tooltip-widget.html.twig' with { icon: 'glyphicon-question-sign',content: tooltip_content,placement: 'left'} %}
   </form>
   {% if classroomInfo%}
   <table class="table table-striped table-hover" id="classroom-table">
