qrcode-classroom-text-fix

--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/classroom-join-header.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/classroom-join-header.html.twig
@@ -30,7 +30,8 @@
               <i class="es-icon es-icon-qrcode"></i>
               <span class="qrcode-popover">
                 <img src="" alt="">
-                扫二维码继续学习
+                {{'扫二维码继续学习'|trans}}
+                {{'二维码时效为半小时'|trans}}
               </span>
             </span>
           </h2>
