qrcode-classroom-text-fix

--- a/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/learn.html.twig
@@ -123,6 +123,7 @@
             <span class="qrcode-popover">
               <img src="" alt="">
               {{'扫二维码继续学习'|trans}}
+              {{'二维码时效为半小时'|trans}}
             </span>
           </li>
         </ul>
