feature: 增加课程分类管理说明

--- a/src/Topxia/AdminBundle/Resources/views/Category/embed.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Category/embed.html.twig
@@ -4,14 +4,20 @@
 
 {% block main %}
 
-<ul class="list-table" id="category-table" style="margin-bottom: 0">
+  {% set tooltip_content = '<div style="width:250px;">
+              <span style="color:blue;">分类地址规则</span><br>
+              1、分类地址：域名/course/分类编码; <br>
+            </div>' %}
+  {% include 'TopxiaAdminBundle:Widget:tooltip-widget.html.twig' with { icon: 'glyphicon-question-sign',content: tooltip_content,placement: 'left'} %}
+
+  <ul class="list-table" id="category-table" style="margin-bottom: 0">
     <li class="th">
-        <div class="row">
-            <div class="td col-md-7">名称</div>
-            <div class="td col-md-2">编码</div>
-            <div class="td col-md-3">操作</div>
-        </div>
+      <div class="row">
+        <div class="td col-md-7">名称</div>
+        <div class="td col-md-2">编码</div>
+        <div class="td col-md-3">操作</div>
+      </div>
     </li>
     {% include 'TopxiaAdminBundle:Category:tbody.html.twig' %}
-</ul>
+  </ul>
 {% endblock %}
