feature: 后台班级管理说明文案跟课程统一

--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
@@ -16,7 +16,8 @@
     {% set tooltip_content = '<div style="width:250px;">
               <span style="color:blue;">班级说明</span><br>
               1、编号及排序无法修改；<br>
-              2、班级地址规则：域名/classroom/班级编号；
+              <span style="color:blue;">班级地址规则</span><br>
+              1、班级规则：域名/classroom/班级编号；
             </div>' %}
     {% include 'TopxiaAdminBundle:Widget:tooltip-widget.html.twig' with { icon: 'glyphicon-question-sign',content: tooltip_content,placement: 'left'} %}
   </form>
