管理员分配角色只能分配自己创建或他本身的角色

--- a/src/Topxia/AdminBundle/Resources/views/User/roles-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/roles-modal.html.twig
@@ -12,9 +12,11 @@
     </label>
     {% set admin_roles = get_admin_roles() %}
     {% for role in admin_roles%}
-      <label>
-        <input type="checkbox" name="roles[]" value="{{role.code}}" {% if role.code in user.roles %}checked="checked"{% endif %}>{{role.name}}
-      </label>
+      {% if role.code in app.user.roles or role.createdUserId == app.user.id  %}
+          <label>
+            <input type="checkbox" name="roles[]" value="{{role.code}}" {% if role.code in user.roles %}checked="checked"{% endif %}>{{role.name}}
+          </label>
+       {% endif %}
     {% endfor %}
     {% if 'ROLE_SUPER_ADMIN' in app.user.roles %}
       <label>
