--- a/web/assets/v2/less/component/form.less
+++ b/web/assets/v2/less/component/form.less
@@ -43,8 +43,8 @@ textarea {
 
 .form-control {
   color: @gray-dark;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  // -webkit-appearance: none;
+  // -moz-appearance: none;
   // .box-shadow(none);
   border-color: @gray-light;
   // &:focus {
