--- a/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
@@ -3,7 +3,7 @@
 {% set menu = 'admin_role_manage' %}
 
 {% set script_controller = 'permissionbundle/controller/role/index' %}
-
+{% set notUpdateRoles = ['ROLE_SUPER_ADMIN', 'ROLE_ADMIN', 'ROLE_TEACHER', 'ROLE_USER'] %}
 {% block main %}
 
 {{ web_macro.flash_messages() }}
@@ -47,9 +47,9 @@
         <td>
           <div class="btn-group">
             <a href="#modal" data-toggle="modal" data-url="{{ path('admin_role_show', {id:role.id}) }}" data-url="" class="btn btn-default btn-sm">查看</a>
-            
-            {% include 'PermissionBundle:Templates:group-button.html.twig' with {parentCode: 'admin_role_manage', group:'groupBtn', role: role} %}
-
+            {% if role.code not in notUpdateRoles %}
+              {% include 'PermissionBundle:Templates:group-button.html.twig' with {parentCode: 'admin_role_manage', group:'groupBtn', role: role} %}
+            {% endif %}
           </div>
         </td>
       </tr>
