修复可能出现样式混乱的bug

--- a/src/Org/OrgBundle/Resources/views/OrgManage/index.html.twig
+++ b/src/Org/OrgBundle/Resources/views/OrgManage/index.html.twig
@@ -43,7 +43,7 @@
                         {% endif %}
                         {{ org.name }}
                     </div>
-                    <div class="td col-md-2 code">{{ org.code }}</div>
+                    <div class="td col-md-2 code" style="padding-left: {{ 24 * (org.depth - 1 ) }}px; overflow: hidden;" title="{{ org.code }}">{{ org.code }}</div>
                     <div class="td col-md-1 code">{{ org.childrenNum }}</div>
                     <div class="td col-md-2 code">{{ user.nickname }}</div>
                     <div class="td col-md-2 code"> {{org.createdTime|date('Y-m-d')}}</div>
