--- a/src/Topxia/AdminBundle/Resources/views/User/update-org-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/update-org-modal.html.twig
@@ -2,7 +2,7 @@
 
 {% set modalSize = 'large' %}
 
-{% block title %}编辑用户所属组织{% endblock %}
+{% block title %}修改用户组织机构{% endblock %}
 {% block body %}
 
 <form id="user-edit-form" class="form-horizontal" method="post" action="{{ url('admin_user_org_update', {id:user.id}) }}">
