--- a/src/Topxia/AdminBundle/Resources/views/OpenCourse/tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourse/tr.html.twig
@@ -11,6 +11,9 @@
 
     <br>
     <span class="text-muted text-sm">分类：{{ category.name|default('--') }}</span> 
+    {% if course.recommended %}
+      <span class="label label-default">荐:{{ course.recommendedTime|date('Y-m-d') }} / 序号:{{ course.recommendedSeq }}</span>
+    {% endif %}
   </td>
     
   <td>{{ dict_text('courseStatus:html', course.status) }}</td>
