--- a/src/Topxia/WebBundle/Resources/views/Marker/question-tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/question-tr.html.twig
@@ -1,6 +1,16 @@
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
   {% for question in questions %}
-  <li class="row item-lesson {% if question.exist|default(false) %}disdrag {% else %} drag {% endif %}" id="" question-id="{{question.id}}">
+  <li class=" item-lesson {% if question.exist|default(false) %}disdragg {% else %} drag {% endif %}" id="" question-id="{{question.id}}" data-role="scale-blue-item">
+    <span class="sqe-number"><i class="question-remove es-icon es-icon-icon_close_circle" data-role="question-remove"></i><span data-role="sqe-number">1</span>、</span>
+    <span class="title">
+      <i class="icon-drag glyphicon glyphicon-move"></i>
+      <span class="color-primary text-xs" data-role="question-type">[{{ dict('questionType')[question.type] }}]</span>
+    </span>
+    {{question.stem|fill_question_stem_text|plain_text(12) }}
+  </li>
+
+
+  {#<li class="row item-lesson {% if question.exist|default(false) %}disdrag {% else %} drag {% endif %}" id="" question-id="{{question.id}}">
     <div class="col-md-6 col-sm-10 title">
       <div class="before">
         <span class="icon-drag glyphicon glyphicon-move mrm "></span>
@@ -14,7 +24,11 @@
     <div class="col-md-1 content">{{ dict('difficulty')[question.difficulty] }}</div>
     <div class="col-xs-2 content not-add"><a href="javascript:;" class="marker-preview" data-url="{{ path('course_manage_question_preview', {id:question.id, courseId:course.id}) }}">{{'预览'|trans}}</a></div>
     <div class="col-xs-2 content have-add">{{'已添加'|trans}}</div>
-  </li>
+  </li>#}
+
+
+
+
 
   {% else %}
     <div class="empty">{{'一道题都没有'|trans}}</div>
