--- a/web/assets/v2/less/main.less
+++ b/web/assets/v2/less/main.less
@@ -128,3 +128,6 @@
 @import "page/create-course.less";             //创建课程页            
 @import "page/material.less";         
 
+html {
+  height: 100%;
+}
