--- a/src/Topxia/WebBundle/Resources/views/Marker/player.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/player.html.twig
@@ -2,19 +2,30 @@
   <link rel="stylesheet" media="screen" href="{{asset('assets/libs/balloon-video-player/1.3.0/src/skin/video-js.css') }}" rel="stylesheet" type="text/css">
 {% endblock %}
 
-<div class="dashboard-content">
-  <div class="dashboard-body">
-    <div class="lesson-content" id="lesson-video-content" data-role="lesson-content" {% if setting('storage.video_watermark') > 0 and setting('storage.video_watermark_image') %}
+<!-- <div class="dashboard-content"> -->
+  <!-- <div class="dashboard-body"> -->
+  <!-- lesson-content -->
+  <div class="manage-player-body">
+    <div class="manage-player-header">
+      <a href="{{ path('course_manage_lesson', {id:course.id}) }}" class="btn">返回课时管理</a>
+      <a href="{{ path('course_learn', {id:course.id, preview:1}) }}#lesson/{{ lesson.id }}" class="btn btn-default hidden" target="_blank">{{'预览弹题'|trans}}</a>
+      <span class="text-sm color-gray">{{'本页面所有操作自动保存'|trans}}</span>
+    </div>
+    <div class="manage-player-content" id="lesson-video-content" data-role="lesson-content" {% if setting('storage.video_watermark') >
+      0 and setting('storage.video_watermark_image') %}
         data-watermark="{{ filepath(setting('storage.video_watermark_image'), null, true) }}"
       {% endif %}
       {% if setting('storage.video_fingerprint') and app.user %}
         data-fingerprint="{{ finger_print() }}"
       {% endif %}
         data-user-id="{{ app.user.id }}"
-    ></div>
-    <div class="watermarkEmbedded" ></div>
+    >
+    </div>
+    <div class="mask hidden" data-role="player-mask"></div>
+    <div class="watermarkEmbedded"></div>
   </div>
-  <div class="mask">
-  </div>
-  {% include 'TopxiaWebBundle:Marker:coord.html.twig' %}
-</div>
+    
+  <!-- </div> -->
+  
+  
+<!-- </div> -->
