--- a/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
@@ -1,4 +1,4 @@
-<div class="toolbar toolbar-open toolbar-question-marker"
+<div class="pane-question-content js-pane-question-content"
 	data-marker-metas-url="
 	{{path('course_lesson_marker_metas',{'mediaId':lesson.mediaId})}}"
 	data-queston-marker-add-url="{{path('course_lesson_question_marker_add',{'courseId':course.id,'lessonId':lesson.id})}}"
@@ -7,7 +7,7 @@
 	data-marker-update-url="{{path('course_lesson_marker_update',{'courseId':course.id,'lessonId':lesson.id})}}"
 	data-queston-marker-sort-url="{{path('course_lesson_question_marker_sort',{'courseId':course.id,'lessonId':lesson.id})}}"
 	>
-	<div class="question-menu">
+	<!-- <div class="question-menu"> -->
 		<form class="form-horizontal mark-from" action="{{path('course_lesson_question_marker_search',{courseId:course.id,lessonId:lesson.id})}}" method="post" novalidate>
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
 			<div class="form-group">
@@ -16,25 +16,39 @@
 						{{ select_options(targetChoices, app.request.request.get('target'))}}
 					</select>
 				</div>
-				<div class="col-xs-5">
+				<div class="col-xs-7">
 					<input type="text" id="keyword" name="keyword" class="form-control" value="{{ app.request.query.get('keyword') }}" placeholder="{{'关键词'|trans}}"  >
-				</div>
-				<div class="col-xs-2">
-					<button class="btn btn-primary">{{'搜索'|trans}}</button>
+					<button class="es-icon es-icon-search btn-search"></button>
+					<!-- {{'搜索'|trans}} -->
 				</div>
 			</div>
 		</form>
-		<div class="list-title">
+		<div class="question-difficulty hidden">
+			学习过程控制强度：
+			<ul class="nav nav-pills nav-pills-difficulty  " >
+				<li class="active">
+					<a data-toggle="tab">弱</a>
+				</li>
+				<li >
+					<a data-toggle="tab">中</a>
+				</li>
+				<li >
+					<a data-toggle="tab">强</a>
+				</li>
+			</ul>
+		</div>
+		<div class="question-remask"><i class="es-icon es-icon-xinxi remask-icon"></i>仅支持选择题、判断题两类客观题。</div>
+		{#<div class="list-title">
 			<div class="row ">
 				<div class="col-xs-6">{{'题干'|trans}}</div>
 				<div class="col-xs-3 content">{{'题型'|trans}}</div>
 				<div class="col-xs-1 content">{{'难度'|trans}}</div>
 				<div class="col-xs-2 content ">{{'操作'|trans}}</div>
 			</div>
-		</div>
+		</div>#}
 		<ul class="lesson-list gruop-lesson-list" id="subject-lesson-list">
 
 		</ul>
-	</div>
+	<!-- </div> -->
 </div>
 <script>app.load('marker/question')</script>
