--- a/web/assets/v2/css/main.css
+++ b/web/assets/v2/css/main.css
@@ -12545,26 +12545,31 @@ textarea {
     box-shadow: 0 0 15px #2db7f5;
     width: 8px;
     margin-left: -4px;
+    left: 4px;
   }
   25% {
     box-shadow: 0 0 10px #2db7f5;
     width: 7px;
     margin-left: -3.5px;
+    left: 3.5px;
   }
   50% {
     box-shadow: 0 0 5px #2db7f5;
     width: 6px;
     margin-left: -3px;
+    left: 3px;
   }
   75% {
     box-shadow: 0 0 10px #2db7f5;
     width: 7px;
     margin-left: -3.5px;
+    left: 3.5px;
   }
   100% {
     box-shadow: 0 0 15px #2db7f5;
     width: 8px;
     margin-left: -4px;
+    left: 4px;
   }
 }
 @-moz-keyframes boxshow {
@@ -12573,26 +12578,31 @@ textarea {
     box-shadow: 0 0 15px #2db7f5;
     width: 8px;
     margin-left: -4px;
+    left: 4px;
   }
   25% {
     box-shadow: 0 0 10px #2db7f5;
     width: 7px;
     margin-left: -3.5px;
+    left: 3.5px;
   }
   50% {
     box-shadow: 0 0 5px #2db7f5;
     width: 6px;
     margin-left: -3px;
+    left: 3px;
   }
   75% {
     box-shadow: 0 0 10px #2db7f5;
     width: 7px;
     margin-left: -3.5px;
+    left: 3.5px;
   }
   100% {
     box-shadow: 0 0 15px #2db7f5;
     width: 8px;
     margin-left: -4px;
+    left: 4px;
   }
 }
 @keyframes boxshow {
@@ -12600,27 +12610,171 @@ textarea {
     box-shadow: 0 0 15px #2db7f5;
     width: 8px;
     margin-left: -4px;
+    left: 4px;
   }
   25% {
     box-shadow: 0 0 10px #2db7f5;
     width: 7px;
     margin-left: -3.5px;
+    left: 3.5px;
   }
   50% {
     box-shadow: 0 0 5px #2db7f5;
     width: 6px;
     margin-left: -3px;
+    left: 3px;
   }
   75% {
     box-shadow: 0 0 10px #2db7f5;
     width: 7px;
     margin-left: -3.5px;
+    left: 3.5px;
   }
   100% {
     box-shadow: 0 0 15px #2db7f5;
     width: 8px;
     margin-left: -4px;
+    left: 4px;
   }
+}
+.marker-manage .nav.nav-tabs.nav-tabs-edit {
+  margin-bottom: 0;
+  border-bottom: none;
+  background-color: #313131;
+}
+.marker-manage .nav.nav-tabs.nav-tabs-edit > li a {
+  color: #919191;
+  font-size: 14px;
+  padding: 20px 15px;
+}
+.marker-manage .nav.nav-tabs.nav-tabs-edit > li:hover > a,
+.marker-manage .nav.nav-tabs.nav-tabs-edit > li.active > a {
+  background-color: #414141;
+  color: #f5f5f5;
+  border-color: transparent;
+}
+.marker-manage .nav.nav-tabs.nav-tabs-edit .highlight {
+  border-bottom: none;
+}
+.marker-manage .nav.nav-pills.nav-pills-difficulty {
+  display: inline-block;
+  vertical-align: middle;
+}
+.marker-manage .nav.nav-pills.nav-pills-difficulty > li {
+  margin-right: 10px;
+}
+.marker-manage .nav.nav-pills.nav-pills-difficulty > li.active > a {
+  background-color: #46c37b;
+  color: #fff;
+}
+.marker-manage .nav.nav-pills.nav-pills-difficulty > li > a {
+  background-color: #262626;
+  color: #ccc;
+  font-size: 12px;
+  padding: 0 15px;
+}
+.marker-manage .lesson-list {
+  border: 0;
+  margin: 0;
+}
+.marker-manage .lesson-list.highlight {
+  border: 1px dashed red;
+}
+.marker-manage .lesson-list .item-lesson {
+  background-color: transparent;
+  border: none;
+  line-height: 40px;
+  margin-bottom: 10px;
+  margin-left: 0;
+}
+.marker-manage .lesson-list .item-lesson.dragged {
+  border: 1px dashed #919191;
+}
+.marker-manage .lesson-list .item-lesson.disdragg {
+  opacity: 0.3;
+  filter: alpha(opacity=30);
+}
+.marker-manage .lesson-list .item-lesson .sqe-number {
+  display: none;
+}
+.marker-manage .lesson-list .item-lesson .icon-drag {
+  vertical-align: middle;
+  margin-right: 10px;
+  font-size: 16px;
+}
+.marker-manage .lesson-list .item-lesson .question-remove {
+  position: absolute;
+  top: 12px;
+  right: 5px;
+}
+.marker-manage-content {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 160px;
+}
+.marker-manage-content .manage-player-body {
+  position: relative;
+  padding-top: 60px;
+  float: left;
+  height: 100%;
+  width: 70%;
+}
+.marker-manage-content .manage-player-body .manage-player-header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 70%;
+  height: 60px;
+  line-height: 60px;
+}
+.marker-manage-content .manage-player-body .manage-player-content {
+  height: 100%;
+}
+.marker-manage-content .manage-player-body .mask {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  background-color: transparent;
+  background-color: #000;
+}
+.marker-manage-content .manage-edit-body {
+  float: left;
+  width: 30%;
+  height: 100%;
+  background-color: #414141;
+  color: #f5f5f5;
+}
+.marker-manage-content .manage-edit-body .tab-pane {
+  padding: 30px 15px 30px 20px;
+}
+.marker-manage-content .manage-edit-body .btn-search {
+  position: absolute;
+  right: 10px;
+  bottom: 0;
+  padding: 9px;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  color: #616161;
+}
+.marker-manage-content .manage-edit-body .btn-search:focus {
+  outline: none;
+}
+.marker-manage-content .manage-edit-body .question-difficulty {
+  padding-bottom: 30px;
+}
+.marker-manage-content .manage-edit-body .question-remask {
+  padding-top: 24px;
+  border-top: 1px solid #616161;
+  color: #919191;
+  margin-bottom: 20px;
+}
+.marker-manage-content .manage-edit-body .question-remask .remask-icon {
+  color: #ff8a0c;
+  font-size: 16px;
+  margin-right: 10px;
 }
 .marker-modal .question-heading {
   padding-bottom: 15px;
@@ -12731,200 +12885,138 @@ textarea {
   font-size: 12px;
   color: #919191;
 }
-.question-manage.slideing {
+.marker-manage {
+  min-height: 100%;
+  background-color: #313131;
+}
+.marker-manage.slideing {
   -moz-user-select: none;
   -khtml-user-select: none;
   user-select: none;
   cursor: move!important;
 }
-.question-manage {
-  background-color: #eeeeee;
-}
-.question-manage .breadcrumb {
-  margin-bottom: 0;
-  line-height: 60px;
-  background-color: #eeeeee;
-  padding: 0 20px;
-}
-.question-manage .lesson-dashboard {
-  background-color: #eeeeee;
-  top: 60px;
-}
-.question-manage .lesson-dashboard .toolbar {
-  background-color: #eeeeee;
-  border: 0;
-  width: 490px;
-  padding-right: 20px;
-}
-@media (max-width: 991px) {
-  .question-manage .lesson-dashboard .toolbar {
-    width: 350px;
-  }
-}
-.question-manage .lesson-dashboard .dashboard-body {
-  top: 0;
-  bottom: 30%;
-}
-.question-manage .lesson-dashboard .dashboard-content {
-  right: 510px;
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .question-manage .lesson-dashboard .dashboard-content {
-    right: 370px;
-  }
-}
-@media (max-width: 767px) {
-  .question-manage .lesson-dashboard .dashboard-content {
-    right: 20px;
-  }
-}
-.question-manage .lesson-dashboard .mask {
-  display: none;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  bottom: 30%;
-  background-color: transparent;
-}
-.question-manage .lesson-list {
-  border: 0;
-  margin: 0;
-}
-.question-manage .lesson-list .item-lesson {
-  margin: 0 0 10px;
-  cursor: pointer;
-  line-height: 46px;
-}
-.question-manage .lesson-list .item-lesson .before {
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  word-wrap: normal;
-}
-.question-manage .question-menu {
+.marker-manage .question-menu {
   position: relative;
   height: 90%;
+  border: 1px solid #ccc;
+  background: #fff;
+  line-height: 40px;
+  margin-bottom: 15px;
+  margin-left: 20px;
 }
-.question-manage .question-menu .list-title {
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  border-bottom: 1px solid #e1e1e1;
-}
-.question-manage .question-menu .list-title .row {
-  margin: 0;
-}
-.question-manage .question-menu .list-title .content {
-  padding-left: 0;
-  text-align: center;
-}
-@media (max-width: 991px) {
-  .question-manage .question-menu .list-title .content {
-    display: none;
-  }
-}
-.question-manage .question-menu .lesson-list {
+.marker-manage .question-menu .lesson-list {
   min-height: 100px;
 }
-.question-manage .question-menu .lesson-list .item-lesson .title .idname,
-.question-manage .question-menu .lesson-list .item-lesson .title .number,
-.question-manage .question-menu .lesson-list .item-lesson .title .icon-close {
-  display: none;
-}
-.question-manage .question-menu .lesson-list .item-lesson .content {
-  text-align: center;
-  padding-left: 0;
-}
-@media (max-width: 991px) {
-  .question-manage .question-menu .lesson-list .item-lesson .content {
-    display: none;
-  }
-}
-.question-manage .question-menu .lesson-list .item-lesson .content.not-add {
-  display: inline-block;
-}
-.question-manage .question-menu .lesson-list .item-lesson .content.have-add {
-  display: none;
-}
-.question-manage .question-menu .lesson-list .item-lesson.dragged {
-  background-color: #feffeb;
-  background-color: rgba(254, 255, 235, 0.9);
-  width: 150px!important;
-  overflow: hidden;
-}
-.question-manage .question-menu .lesson-list .item-lesson.dragged .title {
-  width: 100%;
-}
-.question-manage .question-menu .lesson-list .item-lesson.dragged .content {
-  display: none;
-}
-.question-manage .question-menu .lesson-list .item-lesson.disdrag {
-  background-color: #f1f1f1;
-  cursor: default;
-  color: #919191;
-  border: 1px dashed  #e1e1e1;
-}
-.question-manage .question-menu .lesson-list .item-lesson.disdrag a {
-  color: #919191;
-  cursor: default;
-}
-.question-manage .question-menu .lesson-list .item-lesson.disdrag .content.not-add {
-  display: none;
-}
-.question-manage .question-menu .lesson-list .item-lesson.disdrag .content.have-add {
-  display: inline-block;
-}
-.question-manage .question-menu .lesson-list .placeholder {
-  background-color: #f1f1f1;
-  border: 1px dashed  #e1e1e1;
-  margin-bottom: 10px;
-  line-height: 46px;
-  height: 46px;
-  padding: 0 10px;
-  color: #919191;
-}
-.question-manage .question-menu .lesson-list .placeholder .remask {
-  display: none;
-}
-.question-manage .question-menu .lesson-list .pagination {
-  position: absolute;
-  bottom: -5px;
-  left: 0;
-  margin-bottom: 0;
-}
-.question-manage .editbox {
+.marker-manage .editbox {
   position: absolute;
   left: 0;
   right: 0;
+  height: 160px;
   bottom: 0;
-  top: 70%;
-  height: 20%;
   background-color: #313131;
 }
-.question-manage .editbox .remask {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  visibility: visible;
-  width: 300px;
-  margin-top: -10px;
-  margin-left: -150px;
-  text-align: center;
-}
-.question-manage .editbox .scalebox {
-  position: relative;
-  height: 20px;
-  z-index: 2;
-}
-.question-manage .editbox .scalebox .scale {
-  position: absolute;
-  display: block;
+.marker-manage .editbox .lesson-list {
   height: 100%;
-  width: 1px;
-  background-color: #fff;
-  z-index: 1;
+  background-color: #414141;
+  padding: 0 160px 0 20px;
 }
-.question-manage .editbox .scalebox .scale .scale-details {
+.marker-manage .editbox .scale-content {
+  height: 111px;
+  padding-top: 10px;
+  border-top: 1px solid #292929;
+}
+.marker-manage .editbox .scalebox {
+  position: relative;
+  height: 21px;
+  border-bottom: 1px solid #404040;
+}
+.marker-manage .editbox .scalebox .lesson-list {
+  height: auto;
+  padding: 0;
+  background-color: transparent;
+}
+.marker-manage .editbox .scalebox .lesson-list .item-lesson {
+  position: relative;
+  padding: 0 10px;
+  margin-bottom: 0;
+  text-align: left;
+}
+.marker-manage .editbox .scalebox .lesson-list .item-lesson:hover {
+  background-color: #46c37b;
+}
+.marker-manage .editbox .scalebox .lesson-list .item-lesson .title {
+  display: none;
+}
+.marker-manage .editbox .scalebox .lesson-list .item-lesson .sqe-number {
+  display: inline;
+}
+.marker-manage .editbox .scalebox .scale {
+  position: absolute;
+  top: 0;
+  display: block;
+  z-index: 1;
+  padding-left: 5px;
+  color: #fff;
+  height: 20px;
+  line-height: 20px;
+}
+.marker-manage .editbox .scalebox .scale.scale-red .line {
+  top: 0;
+  height: 160px;
+  border-color: red;
+}
+.marker-manage .editbox .scalebox .scale.scale-red .scale-details {
+  visibility: visible;
+  font-size: 12px;
+}
+.marker-manage .editbox .scalebox .scale.scale-blue {
+  cursor: pointer;
+  height: 132px;
+}
+.marker-manage .editbox .scalebox .scale.scale-blue .line {
+  top: 32px;
+  height: 100px;
+  border-color: #2b9cf0;
+}
+.marker-manage .editbox .scalebox .scale.scale-blue.highlight,
+.marker-manage .editbox .scalebox .scale.scale-blue:hover {
+  width: 8px;
+}
+.marker-manage .editbox .scalebox .scale.scale-blue.highlight .line,
+.marker-manage .editbox .scalebox .scale.scale-blue:hover .line {
+  border-color: transparent;
+  background-color: rgba(45, 183, 245, 0.5);
+  -moz-animation: boxshow 1s ease infinite;
+  -webkit-animation: boxshow 1s ease infinite;
+  animation: boxshow 1s ease infinite;
+}
+.marker-manage .editbox .scalebox .scale.scale-blue.highlight .scale-details,
+.marker-manage .editbox .scalebox .scale.scale-blue:hover .scale-details {
+  width: 220px;
+  margin-left: -110px;
+  visibility: visible;
+}
+.marker-manage .editbox .scalebox .scale.scale-blue.moveing .line {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.marker-manage .editbox .scalebox .scale.scale-blue.moveing .scale-details {
+  width: 220px;
+  margin-left: -110px;
+  visibility: visible;
+}
+.marker-manage .editbox .scalebox .scale.scale-white .line {
+  height: 106px;
+  top: 26px;
+  border-color: #fff;
+}
+.marker-manage .editbox .scalebox .scale.scale-white .line i {
+  position: absolute;
+  left: -8.5px;
+  top: -13.5px;
+}
+.marker-manage .editbox .scalebox .scale .scale-details {
   position: absolute;
   left: 0;
   bottom: 100%;
@@ -12935,153 +13027,22 @@ textarea {
   text-align: center;
   color: #fff;
 }
-.question-manage .editbox .scalebox .scale.red,
-.question-manage .editbox .scalebox .scale.blue {
+.marker-manage .editbox .scalebox .scale .line {
+  position: absolute;
+  top: 0;
   left: 0;
-  bottom: 100%;
-  height: 100%;
-  top: -58px;
-  background-color: #ed634a;
+  height: 25px;
+  border-left: 1px solid #616161;
 }
-@media (max-width: 1297px) {
-  .question-manage .editbox .scalebox .scale.red,
-  .question-manage .editbox .scalebox .scale.blue {
-    top: -40px;
-  }
+.marker-manage .editbox .scalebox .scale .line.line-dashed {
+  top: 32px;
+  height: 100px;
+  border-left: 1px dashed #a3a3a3;
 }
-.question-manage .editbox .scalebox .scale.white {
-  height: 80%;
-  opacity: 0.6;
-  filter: alpha(opacity=60);
-}
-.question-manage .editbox .scalebox .scale.white .scale-details {
-  visibility: visible;
-  background-color: transparent;
-  bottom: -20px;
-}
-.question-manage .editbox .scalebox .scale.blue {
-  background-color: #2db7f5;
-  height: 78px;
-}
-@media (max-width: 1297px) {
-  .question-manage .editbox .scalebox .scale.blue {
-    height: 60px;
-  }
-}
-.question-manage .editbox .scalebox .scale.blue:hover {
-  background-color: #2db7f5;
-  background-color: rgba(45, 183, 245, 0);
-}
-.question-manage .editbox .scalebox .scale.blue:hover .border {
-  background-color: #2db7f5;
-  background-color: rgba(45, 183, 245, 0.5);
-  -moz-animation: boxshow 1s ease infinite;
-  -webkit-animation: boxshow 1s ease infinite;
-  animation: boxshow 1s ease infinite;
-}
-.question-manage .editbox .scalebox .scale.blue:hover .scale-details {
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  visibility: visible;
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-.question-manage .editbox .scalebox .scale.blue .border {
-  position: absolute;
-  width: 8px;
-  margin-left: -4px;
-  height: 100%;
-  cursor: pointer;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details {
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  visibility: hidden;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  background-color: transparent;
-  width: 220px;
-  margin-left: -110px;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list {
-  min-height: 40px;
-  height: auto;
-  margin: 0;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson {
-  background-color: transparent;
-  border: none;
-  margin-bottom: 0;
-  text-align: left;
-  height: 46px;
-  overflow: hidden;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson:hover {
-  background-color: #46c37b;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson .title {
-  position: relative;
-  width: 100%;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson .title .before {
-  width: 180px;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson .title .before .number {
-  display: inline;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson .title .icon-close {
-  display: inline;
-  position: absolute;
-  top: 15px;
-  right: 10px;
-  color: #fff;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson .icon-close,
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson .content,
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .item-lesson .icon-drag {
-  display: none;
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details .lesson-list .placeholder {
-  background-color: #f1f1f1;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-.question-manage .editbox .scalebox .scale.blue .scale-details.visible {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  visibility: visible;
-}
-.question-manage .editbox .scalebox .scale.blue.show {
-  background-color: transparent;
-}
-.question-manage .editbox .scalebox .scale.blue.show .border {
-  background-color: rgba(45, 183, 245, 0.5);
-  -moz-animation: boxshow 1s ease infinite;
-  -webkit-animation: boxshow 1s ease infinite;
-  animation: boxshow 1s ease infinite;
-}
-.question-manage .editbox .lesson-list {
-  z-index: 1;
-  height: 100%;
-  margin-top: -20px;
-}
-.question-manage .editbox .lesson-list .placeholder {
-  height: 100%;
-  position: relative;
-  background-color: #2db7f5;
-  background-color: rgba(45, 183, 245, 0.5);
-  border: 1px dashed #2db7f5;
-  color: #2db7f5;
-  text-align: center;
-  margin: 0;
-}
-.question-manage .editbox .lesson-list .placeholder .sub-remask {
-  display: none;
+.marker-manage .editbox .scalebox .scale .scale-time {
+  display: inline-block;
+  font-size: 12px;
+  -webkit-transform: scale(0.83);
 }
 .ballon-video-player .vjs-marker.bg-primary {
   background-color: #46c37b !important;
@@ -14925,4 +14886,7 @@ textarea {
   padding-top: 30px;
   margin-bottom: 20px;
   border-top: 1px solid #dddddd;
+}
+html {
+  height: 100%;
 }
