--- a/src/Topxia/WebBundle/Resources/views/Course/open-course-layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/open-course-layout.html.twig
@@ -14,8 +14,8 @@
 
 {% block content %}
 
-  {% if is_plugin_installed('GroupSell') and not member%}
-    {{ render(controller('GroupSellBundle:GroupSell:showGroup',{type:'course',targetId:course.id})) }}  
+  {% if is_plugin_installed('GroupSell') and not member %}
+    {{ render(controller('GroupSellBundle:GroupSell:showGroup',{type:'course',targetId:course.id})) }}
   {% endif %}
   <div class="course-detail row">
     <div class="col-lg-9 col-md-8  course-detail-main">
@@ -48,4 +48,12 @@
       {% endblock %}
     </div>
   </div>
+
+  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {
+  'title': course.title,
+  'desc': course.about|striptags|purify_and_trim_html,
+  'link': app.request.uri,
+  'imgUrl': fileurl(course.largePicture,'course.png'),
+  } %}
+
 {% endblock %}
