--- a/src/Topxia/WebBundle/Resources/views/Group/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/layout.html.twig
@@ -2,8 +2,7 @@
 {% block title %}- {{ parent() }}{% endblock %}
 {% set bodyClass = 'group-page' %}
 {% block content %}
-   {% include 'TopxiaWebBundle:Group:group-header.html.twig' with {'groupinfo':groupinfo,'is_groupmember':is_groupmember|default('')} %}
-  
+  {% include 'TopxiaWebBundle:Group:group-header.html.twig' with {'groupinfo':groupinfo,'is_groupmember':is_groupmember|default('')} %}
   {% block group_body %}
     <div class="row">
       <div class="col-md-9 group-main">
@@ -15,4 +14,10 @@
       </div>
     </div>
   {% endblock %}
+  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {
+  'title': groupinfo.title,
+  'desc': groupinfo.about,
+  'link': app.request.uri,
+  'imgUrl': fileurl(groupinfo.logo,'course.png'),
+  } %}
 {% endblock %}
