--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/content-layout.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/content-layout.html.twig
@@ -49,4 +49,12 @@
     {% include 'ClassroomBundle:ClassroomThread:access-intercept-modal.html.twig' %}
   {% endif %}
 </div>
+
+  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {
+  'title': classroom.title,
+  'desc': classroom.about|striptags|purify_and_trim_html,
+  'link': app.request.uri,
+  'imgUrl': fileurl(classroom.largePicture,'course.png'),
+  }%}
+
 {% endblock %}
