--- a/src/Topxia/WebBundle/Resources/views/Course/normal-layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/normal-layout.html.twig
@@ -17,8 +17,8 @@
 
 {% block content %}
 
-  {% if is_plugin_installed('GroupSell') and not member%}
-    {{ render(controller('GroupSellBundle:GroupSell:showGroup',{type:'course',targetId:course.id})) }}  
+  {% if is_plugin_installed('GroupSell') and not member %}
+    {{ render(controller('GroupSellBundle:GroupSell:showGroup',{type:'course',targetId:course.id})) }}
   {% endif %}
   <div class="course-detail row">
     <div class="col-lg-9 col-md-8  course-detail-main">
@@ -46,19 +46,26 @@
         {% endif %}
 
         {{ render(controller('TopxiaWebBundle:Part/Course:teachers',{course: course})) }}
-        
+
         {% cache 'course/' ~ course.id ~ '/sidebar/students' 600 %}
-          {{ render(controller('TopxiaWebBundle:Part/Course:students',{course: course})) }}
+        {{ render(controller('TopxiaWebBundle:Part/Course:students',{course: course})) }}
         {% endcache %}
-        
+
         {% include 'TopxiaWebBundle:Course:Part/normal-sidebar-statuses.html.twig' %}
 
       {% endblock %}
     </div>
   </div>
 
-     {% if is_plugin_installed('HowzhiPopAd') %}
-          {{ render(controller('HowzhiPopAdBundle:HowzhiPop:index')) }}
-     {% endif %} 
+  {% if is_plugin_installed('HowzhiPopAd') %}
+    {{ render(controller('HowzhiPopAdBundle:HowzhiPop:index')) }}
+  {% endif %}
+
+  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {
+  'title': course.title,
+  'desc': course.about|striptags|purify_and_trim_html,
+  'link': app.request.uri,
+  'imgUrl': fileurl(course.largePicture,'course.png'),
+  } %}
 
 {% endblock %}
